loan products page implemetation
